Completed challenge successfully

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -13,12 +13,25 @@
     />
   </head>
   <body>
-    <div class="rounded-box">This box has rounded corners</div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="container">
+      <div class="rounded-box">
+        <div class="rounded-box2">
+          <img src="images/image-qr-code.png" />
+        </div>
+        <div class="text-preset-1">
+          Improve your front-end skills by building projects
+        </div>
+        <div class="text-preset-2">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </div>
+      </div>
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Amos</a>.
+      </p>
     </div>
   </body>
 </html>
